--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
       <button type="submit">
         <svg class="icon-search">
-          <use href="./image/sprite.svg#icon-search"></use>
+          <use href="./images/sprite.svg#icon-search"></use>
         </svg>
       </button>
     </form>
@@ -29,7 +29,7 @@
       <button type="button" class="load-more hidden">Load more</button>
       <button type="button" class="to-top-btn hidden">
         <svg class="icon-arrow">
-          <use href="./image/sprite.svg#icon-arrow-up"></use>
+          <use href="./images/sprite.svg#icon-arrow-up"></use>
         </svg>
       </button>
     </div>
